Ajustes no latout do portfolio

--- a/index copy 3.html
+++ b/index copy 3.html
@@ -85,7 +85,7 @@
       <!-- Perfil -->
       <section class="profile">
         <div class="profile-img-container">
-          <img src="assets/img-perfil-transparente.png" alt="Foto Perfil" />
+          <img src="assets/img-perfil-transparente.png" alt="Foto Perfil"/>
           <!-- <svg
             viewBox="0 0 500 150"
             preserveAspectRatio="none"
@@ -126,8 +126,8 @@
           </div>
           <div class="container-btn">
             <a href="#" onclick="showSection('projetos')" class="btn-projetos">
-              <button class="tooltip-custom">
-                <span class="tooltip-text">Clique aqui</span>
+              <button  class="tooltip-custom">
+               <span class="tooltip-text">Clique aqui</span>
                 <i class="fa-solid fa-eye" style="color: #001542"></i> Ver
                 Projetos
               </button>
@@ -477,7 +477,7 @@
         <!-- Contato -->
         <!-- Contato -->
         <section id="contato" class="section-contato section">
-          <h1>Contato</h1>
+          <h1><i class="fas fa-envelope"></i> Contato</h1>
           <hr />
 
           <div class="contato-info">
@@ -492,12 +492,7 @@
             </p> -->
           </div>
 
-          <form
-            class="form-contato"
-            action="https://formcarry.com/s/Tf3fJGaW2Vd"
-            method="POST"
-            enctype="multipart/form-data"
-          >
+          <form class="form-contato">
             <i class="fas fa-user"></i>
             <input type="text" name="nome" placeholder="Seu nome" required />
             <i class="fas fa-envelope"></i>
