--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
       property="og:description"
       content="Desenvolvedor Full Stack com foco em soluções modernas, responsivas e eficientes. Portfólio com projetos web e automações."
     />
-    <meta property="og:image" content="https://portfolio.chagassilva.com/assets/img-perfil-transparente.png" />
+    <meta
+      property="og:image"
+      content="https://portfolio.chagassilva.com/assets/img-perfil-transparente.png"
+    />
     <meta property="og:url" content="https://portfolio.chagassilva.com" />
     <meta property="og:type" content="Portfolio" />
+
+    <!-- Favicon (opcional mas recomendado) -->
+    <link rel="icon" href="assets/logo-transparente.svg" type="image/x-icon" />
 
     <link
       rel="stylesheet"
